--- a/providers/wallet/package.json
+++ b/providers/wallet/package.json
@@ -28,6 +28,7 @@
     "@web3-react/url": "8.2.3",
     "@web3-react/walletconnect-v2": "8.5.1",
     "firebase": "11.3.0",
+    "react-router": "7.1.5",
     "uuid": "11.0.5"
   },
   "description": "react wallet provider",
