chore: move code to framework

--- a/lerna.json
+++ b/lerna.json
@@ -9,6 +9,6 @@
       "yes": true
     }
   },
-  "packages": ["components/*", "other/*", "providers/*"],
+  "packages": ["components/*"],
   "version": "independent"
 }
