feat: move in yup rules

--- a/lerna.json
+++ b/lerna.json
@@ -9,6 +9,6 @@
       "yes": true
     }
   },
-  "packages": ["components/*"],
+  "packages": ["components/*", "other/*"],
   "version": "independent"
 }
